# interface-gen

./: .gitignore  README.md  dist-readme.md  install-toolchain.sh  pyproject.toml  requirements.txt
.github/workflows/: avro-python.yaml  publish.yml
avro/python/: README.md  docs.py  generate.py  protocols_test.py
example_data/v0.1-example/: TripStart.json
interface-gen/: README.md  generate.py  requirements.txt  toolchain.py
interface_gen/: README.md  docs.py  generate.py  toolchain.py
protocol/v0.1-example/: trip.avdl
protocol/v0.1-example/proto3/: v0.1-example.proto
protocol/v0.1-example/schema/: TripEnd.avsc  TripStart.avsc
